[gd_scene load_steps=5 format=3 uid="uid://8wgqwyc0wvli"]

[ext_resource type="PackedScene" uid="uid://c4uhypoecgybf" path="res://Source/Backgrounds/BackgroundDefault.tscn" id="1_dk0ki"]
[ext_resource type="Script" path="res://Source/Scenes/Ending/Ending.gd" id="1_dvrj4"]
[ext_resource type="PackedScene" uid="uid://b70j1jgqjeodt" path="res://Source/Scenes/MainMenu.tscn" id="2_v1l23"]
[ext_resource type="Texture2D" uid="uid://byodcef6j66po" path="res://Graphics/Backgrounds/BackgroundEnding.jpg" id="2_ympgc"]

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvrj4")
main_menu_resource = ExtResource("2_v1l23")

[node name="BackgroundDefault" parent="." instance=ExtResource("1_dk0ki")]
layout_mode = 1
texture = ExtResource("2_ympgc")

[node name="Control" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Panel" type="PanelContainer" parent="Control"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EndingTitle"
horizontal_alignment = 1

[node name="CharacterName" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterRecipe" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterRecipeDescription" type="RichTextLabel" parent="Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 18
fit_content = true

[node name="MainMenuButton" type="Button" parent="Control"]
layout_mode = 2
text = "EndingMainMenuButton"

[connection signal="pressed" from="Control/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
